// Package authz æä¾›æƒé™éªŒè¯æ’ä»¶å®ç°
//
// multi_key.go: å¤šå¯†é’¥ï¼ˆM-of-Nï¼‰æƒé™éªŒè¯æ’ä»¶
package authz

import (
	"context"
	"fmt"

	"github.com/weisyn/v1/internal/core/tx/ports/hash"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/tx"
)

// MultiKeyPlugin M-of-N å¤šå¯†é’¥æƒé™éªŒè¯æ’ä»¶
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼šéªŒè¯ MultiKeyLock çš„è§£é”è¯æ˜ï¼ˆMultiKeyProofï¼‰
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// ä¼ä¸šå¤šç­¾åœºæ™¯ï¼ˆå¦‚å…¬å¸é‡‘åº“ã€è‘£äº‹ä¼šå†³ç­–ï¼‰éœ€è¦ M-of-N å¤šé‡ç­¾åï¼š
// - M: éœ€è¦çš„æœ€å°‘ç­¾åæ•°
// - N: æˆæƒå…¬é’¥æ€»æ•°
// - ä¾‹å¦‚ 3-of-5ï¼š5 ä¸ªæˆæƒè€…ä¸­ä»»æ„ 3 ä¸ªç­¾åå³å¯
//
// ğŸ”’ **éªŒè¯è§„åˆ™**ï¼š
// 1. ç­¾åæ•°é‡æ£€æŸ¥ï¼šsignatures.length >= required_signatures
// 2. ç´¢å¼•æœ‰æ•ˆæ€§ï¼šæ¯ä¸ª key_index åœ¨ [0, N-1] èŒƒå›´å†…
// 3. ç´¢å¼•å”¯ä¸€æ€§ï¼šä¸å…è®¸é‡å¤ä½¿ç”¨ç›¸åŒçš„ key_index
// 4. ç­¾åéªŒè¯ï¼šæ¯ä¸ªç­¾åå¯¹åº”æ­£ç¡®çš„å…¬é’¥ï¼ˆå§”æ‰˜ç»™MultiSignatureVerifierï¼‰
// 5. ç®—æ³•ä¸€è‡´æ€§ï¼šæ‰€æœ‰ç­¾åç®—æ³•ä¸€è‡´ä¸”ç¬¦åˆè¦æ±‚ï¼ˆå§”æ‰˜ç»™MultiSignatureVerifierï¼‰
//
// âš ï¸ **æ ¸å¿ƒçº¦æŸ**ï¼š
// - âŒ æ’ä»¶æ— çŠ¶æ€ï¼šä¸å­˜å‚¨éªŒè¯ç»“æœ
// - âŒ æ’ä»¶åªè¯»ï¼šä¸ä¿®æ”¹äº¤æ˜“
// - âœ… å¹¶å‘å®‰å…¨ï¼šå¤šä¸ª goroutine å¯ä»¥åŒæ—¶è°ƒç”¨
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼šVerifier Kernelï¼ˆé€šè¿‡ AuthZ Hookï¼‰
type MultiKeyPlugin struct {
	multiSigVerifier  crypto.MultiSignatureVerifier // å¤šé‡ç­¾åéªŒè¯å™¨ï¼ˆCryptoå±‚ï¼‰
	hashCanonicalizer *hash.Canonicalizer           // è§„èŒƒåŒ–å“ˆå¸Œè®¡ç®—å™¨ï¼ˆTX å†…éƒ¨å·¥å…·ï¼‰
}

// NewMultiKeyPlugin åˆ›å»ºæ–°çš„ MultiKeyPlugin
//
// å‚æ•°ï¼š
//   - multiSigVerifier: å¤šé‡ç­¾åéªŒè¯å™¨ï¼ˆç”¨äºéªŒè¯å¤šé‡ç­¾åï¼‰
//   - hashCanonicalizer: è§„èŒƒåŒ–å“ˆå¸Œè®¡ç®—å™¨ï¼ˆç”¨äºäº¤æ˜“å“ˆå¸Œï¼‰
//
// è¿”å›ï¼š
//   - *MultiKeyPlugin: æ–°åˆ›å»ºçš„å®ä¾‹
func NewMultiKeyPlugin(
	multiSigVerifier crypto.MultiSignatureVerifier,
	hashCanonicalizer *hash.Canonicalizer,
) *MultiKeyPlugin {
	return &MultiKeyPlugin{
		multiSigVerifier:  multiSigVerifier,
		hashCanonicalizer: hashCanonicalizer,
	}
}

// Name è¿”å›æ’ä»¶åç§°
//
// å®ç° tx.AuthZPlugin æ¥å£
//
// è¿”å›ï¼š
//   - string: "multi_key"
func (p *MultiKeyPlugin) Name() string {
	return "multi_key"
}

// Match éªŒè¯ UnlockingProof æ˜¯å¦åŒ¹é… LockingCondition
//
// å®ç° tx.AuthZPlugin æ¥å£
//
// ğŸ¯ **æ ¸å¿ƒé€»è¾‘**ï¼š
// 1. ç±»å‹æ£€æŸ¥ï¼šlock å¿…é¡»æ˜¯ MultiKeyLockï¼Œproof å¿…é¡»æ˜¯ MultiKeyProof
// 2. ç­¾åæ•°é‡éªŒè¯ï¼šsignatures.length >= required_signatures
// 3. ç´¢å¼•æœ‰æ•ˆæ€§å’Œå”¯ä¸€æ€§éªŒè¯
// 4. ç­¾åéªŒè¯ï¼šæ¯ä¸ªç­¾åå¯¹åº”æ­£ç¡®çš„å…¬é’¥
// 5. ç®—æ³•ä¸€è‡´æ€§éªŒè¯
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - lock: UTXO çš„é”å®šæ¡ä»¶
//   - unlockingProof: input çš„è§£é”è¯æ˜
//   - tx: å®Œæ•´çš„äº¤æ˜“å¯¹è±¡ï¼ˆç”¨äºç­¾åéªŒè¯ï¼‰
//
// è¿”å›ï¼š
//   - bool: æ˜¯å¦åŒ¹é…æ­¤æ’ä»¶
//   - true: æ­¤æ’ä»¶å¤„ç†äº†éªŒè¯ï¼ˆå¯èƒ½æˆåŠŸæˆ–å¤±è´¥ï¼‰
//   - false: æ­¤æ’ä»¶ä¸å¤„ç†æ­¤ç±»å‹çš„ lock/proof
//   - error: éªŒè¯é”™è¯¯
//   - nil: éªŒè¯æˆåŠŸ
//   - non-nil: éªŒè¯å¤±è´¥ï¼Œæè¿°å¤±è´¥åŸå› 
//
// ğŸ“ **ä½¿ç”¨åœºæ™¯**ï¼š
//
//	// åœºæ™¯ï¼šå…¬å¸é‡‘åº“ 3-of-5 å¤šç­¾
//	multi_key_lock {
//	    required_signatures: 3
//	    authorized_keys: [CEOå…¬é’¥, CFOå…¬é’¥, CTOå…¬é’¥, COOå…¬é’¥, è‘£äº‹å…¬é’¥]
//	}
//
//	// è§£é”è¯æ˜ï¼šCEO + CFO + CTO ç­¾å
//	multi_key_proof {
//	    signatures: [
//	        {key_index: 0, signature: CEOç­¾å},
//	        {key_index: 1, signature: CFOç­¾å},
//	        {key_index: 2, signature: CTOç­¾å}
//	    ]
//	}
func (p *MultiKeyPlugin) Match(
	ctx context.Context,
	lock *transaction.LockingCondition,
	unlockingProof *transaction.UnlockingProof,
	tx *transaction.Transaction,
) (bool, error) {
	// 1. ç±»å‹æ£€æŸ¥ï¼šæ˜¯å¦ä¸º MultiKeyLock
	multiKeyLock := lock.GetMultiKeyLock()
	if multiKeyLock == nil {
		return false, nil // ä¸æ˜¯ MultiKeyLockï¼Œè®©å…¶ä»–æ’ä»¶å¤„ç†
	}

	// 2. æå– MultiKeyProof
	multiKeyProof := unlockingProof.GetMultiKeyProof()
	if multiKeyProof == nil {
		return true, fmt.Errorf("proof is not MultiKeyProof")
	}

	// 3. éªŒè¯ç­¾åæ•°é‡
	requiredSigs := multiKeyLock.RequiredSignatures
	providedSigs := uint32(len(multiKeyProof.Signatures))
	if providedSigs < requiredSigs {
		return true, fmt.Errorf(
			"insufficient signatures: required=%d, provided=%d",
			requiredSigs, providedSigs,
		)
	}

	// 4. æ‰¾åˆ°å½“å‰ input çš„ç´¢å¼•
	//   æ³¨æ„ï¼šç”±äº AuthZ éªŒè¯æ˜¯æŒ‰è¾“å…¥é¡ºåºè¿›è¡Œçš„ï¼Œæˆ‘ä»¬éœ€è¦æ‰¾åˆ°åŒ¹é…çš„ç´¢å¼•
	//   é€šè¿‡æ¯”è¾ƒ proof çš„æŒ‡é’ˆåœ°å€æ¥å®šä½
	inputIndex := -1
	for i, input := range tx.Inputs {
		// æ¯”è¾ƒ MultiKeyProof æ˜¯å¦æ˜¯åŒä¸€ä¸ªå¯¹è±¡
		if input.GetMultiKeyProof() == multiKeyProof {
			inputIndex = i
			break
		}
	}
	if inputIndex == -1 {
		return true, fmt.Errorf("æ— æ³•æ‰¾åˆ°å½“å‰è¾“å…¥çš„ç´¢å¼•")
	}

	// 5. å‡†å¤‡å¤šé‡ç­¾åéªŒè¯æ‰€éœ€çš„æ•°æ®
	// âœ… **å®Œæ•´å®ç°**ï¼šä¸ºæ¯ä¸ªç­¾åå•ç‹¬è®¡ç®—ç­¾åå“ˆå¸Œï¼ˆå¦‚æœSighashTypeä¸åŒï¼‰
	// ğŸ’¡ **å®ç°è¯´æ˜**ï¼š
	// - å¦‚æœæ‰€æœ‰ç­¾åä½¿ç”¨ç›¸åŒçš„SighashTypeï¼Œä½¿ç”¨ç»Ÿä¸€çš„äº¤æ˜“å“ˆå¸Œ
	// - å¦‚æœç­¾åä½¿ç”¨ä¸åŒçš„SighashTypeï¼Œä¸ºæ¯ä¸ªç­¾åå•ç‹¬è®¡ç®—äº¤æ˜“å“ˆå¸Œå¹¶å•ç‹¬éªŒè¯
	
	// è½¬æ¢ç­¾åå’Œå…¬é’¥æ ¼å¼
	authorizedKeys := multiKeyLock.AuthorizedKeys
	publicKeys := make([]crypto.PublicKey, 0, len(authorizedKeys))
	for _, pbKey := range authorizedKeys {
		publicKeys = append(publicKeys, crypto.PublicKey{
			Value: pbKey.Value,
		})
	}
	
	// æ£€æŸ¥æ‰€æœ‰ç­¾åæ˜¯å¦ä½¿ç”¨ç›¸åŒçš„SighashType
	allSameSighashType := true
	var firstSighashType transaction.SignatureHashType
	if len(multiKeyProof.Signatures) > 0 {
		firstSighashType = multiKeyProof.Signatures[0].SighashType
		for i := 1; i < len(multiKeyProof.Signatures); i++ {
			if multiKeyProof.Signatures[i].SighashType != firstSighashType {
				allSameSighashType = false
				break
			}
		}
	} else {
		firstSighashType = transaction.SignatureHashType_SIGHASH_ALL
	}

	if allSameSighashType {
		// âœ… æ‰€æœ‰ç­¾åä½¿ç”¨ç›¸åŒçš„SighashTypeï¼Œä½¿ç”¨ç»Ÿä¸€çš„äº¤æ˜“å“ˆå¸Œ
		txHash, err := p.hashCanonicalizer.ComputeSignatureHashForVerification(
			ctx,
			tx,
			inputIndex,
			firstSighashType,
		)
		if err != nil {
			return true, fmt.Errorf("è®¡ç®—ç­¾åå“ˆå¸Œå¤±è´¥: %w", err)
		}

		// è½¬æ¢ç­¾åæ¡ç›®æ ¼å¼
		multiSigEntries := make([]crypto.MultiSignatureEntry, 0, len(multiKeyProof.Signatures))
	for _, sigEntry := range multiKeyProof.Signatures {
		multiSigEntries = append(multiSigEntries, crypto.MultiSignatureEntry{
			KeyIndex:   sigEntry.KeyIndex,
			Signature:  sigEntry.Signature.Value,
			Algorithm:  sigEntry.Algorithm,
				SighashType: sigEntry.SighashType,
		})
	}

		// è°ƒç”¨MultiSignatureVerifierè¿›è¡Œå¯†ç å­¦éªŒè¯
	valid, err := p.multiSigVerifier.VerifyMultiSignature(
			txHash,
		multiSigEntries,
		publicKeys,
		multiKeyLock.RequiredSignatures,
		multiKeyLock.RequiredAlgorithm,
	)
	
	if err != nil {
		return true, fmt.Errorf("å¤šé‡ç­¾åéªŒè¯å¤±è´¥: %w", err)
	}
	
	if !valid {
		return true, fmt.Errorf("å¤šé‡ç­¾åéªŒè¯å¤±è´¥ï¼šç­¾åéªŒè¯ä¸é€šè¿‡")
		}
	} else {
		// âœ… ç­¾åä½¿ç”¨ä¸åŒçš„SighashTypeï¼Œä¸ºæ¯ä¸ªç­¾åå•ç‹¬è®¡ç®—äº¤æ˜“å“ˆå¸Œå¹¶éªŒè¯
		// ğŸ’¡ **å®ç°è¯´æ˜**ï¼šä¸åŒSighashTypeä¼šäº§ç”Ÿä¸åŒçš„äº¤æ˜“å“ˆå¸Œï¼Œéœ€è¦å•ç‹¬éªŒè¯
		validCount := 0
		for i, sigEntry := range multiKeyProof.Signatures {
			// ä¸ºå½“å‰ç­¾åè®¡ç®—å¯¹åº”çš„äº¤æ˜“å“ˆå¸Œ
			txHash, err := p.hashCanonicalizer.ComputeSignatureHashForVerification(
				ctx,
				tx,
				inputIndex,
				sigEntry.SighashType,
			)
			if err != nil {
				return true, fmt.Errorf("è®¡ç®—ç­¾å%dçš„å“ˆå¸Œå¤±è´¥: %w", i, err)
			}

			// éªŒè¯key_indexèŒƒå›´
			if sigEntry.KeyIndex >= uint32(len(publicKeys)) {
				return true, fmt.Errorf("ç­¾å%dçš„key_index=%dè¶…å‡ºèŒƒå›´ï¼ˆå…¬é’¥æ•°é‡=%dï¼‰", i, sigEntry.KeyIndex, len(publicKeys))
			}

			// ä½¿ç”¨MultiSignatureVerifieréªŒè¯å•ä¸ªç­¾å
			// æ³¨æ„ï¼šé€šè¿‡MultiSignatureVerifieré—´æ¥ä½¿ç”¨ï¼ˆåˆ›å»ºä¸€ä¸ªå•ç­¾åæ¡ç›®ï¼‰
			singleSigEntry := []crypto.MultiSignatureEntry{
				{
					KeyIndex:   sigEntry.KeyIndex,
					Signature:  sigEntry.Signature.Value,
					Algorithm:  sigEntry.Algorithm,
					SighashType: sigEntry.SighashType,
				},
			}
			
			valid, err := p.multiSigVerifier.VerifyMultiSignature(
				txHash,
				singleSigEntry,
				publicKeys,
				1, // åªéœ€è¦1ä¸ªç­¾å
				sigEntry.Algorithm,
			)
			
			if err != nil {
				return true, fmt.Errorf("ç­¾å%déªŒè¯å¤±è´¥: %w", i, err)
			}
			
			if !valid {
				return true, fmt.Errorf("ç­¾å%déªŒè¯å¤±è´¥ï¼šç­¾åéªŒè¯ä¸é€šè¿‡ï¼ˆkey_index=%dï¼‰", i, sigEntry.KeyIndex)
			}
			
			validCount++
		}

		// éªŒè¯æœ‰æ•ˆç­¾åæ•°æ˜¯å¦æ»¡è¶³è¦æ±‚
		if uint32(validCount) < multiKeyLock.RequiredSignatures {
			return true, fmt.Errorf(
				"æœ‰æ•ˆç­¾åæ•°ä¸è¶³: éœ€è¦ %d ä¸ªï¼Œå®é™… %d ä¸ª",
				multiKeyLock.RequiredSignatures, validCount,
			)
		}
	}

	// 7. æ‰€æœ‰éªŒè¯é€šè¿‡
	return true, nil
}

// ç¼–è¯‘æœŸæ£€æŸ¥ï¼šç¡®ä¿ MultiKeyPlugin å®ç°äº† tx.AuthZPlugin æ¥å£
var _ tx.AuthZPlugin = (*MultiKeyPlugin)(nil)
