// Package authz æä¾›æƒé™éªŒè¯æ’ä»¶å®ç°
//
// æœ¬åŒ…å®ç° AuthZ é’©å­çš„å„ç§éªŒè¯æ’ä»¶ï¼Œè´Ÿè´£éªŒè¯ UnlockingProof æ˜¯å¦åŒ¹é… LockingConditionã€‚
package authz

import (
	"bytes"
	"context"
	"fmt"

	"github.com/weisyn/v1/internal/core/tx/ports/hash"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/tx"
)

// SingleKeyPlugin å•å¯†é’¥éªŒè¯æ’ä»¶
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼šéªŒè¯ SingleKeyProof æ˜¯å¦åŒ¹é… SingleKeyLock
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// å•å¯†é’¥éªŒè¯æ˜¯æœ€åŸºç¡€çš„æƒé™éªŒè¯æ–¹å¼ï¼Œç±»ä¼¼äº BTC çš„ P2PKHï¼ˆPay-to-Public-Key-Hashï¼‰ã€‚
// éªŒè¯è¿‡ç¨‹åŒ…æ‹¬ï¼šç­¾åéªŒè¯ + å…¬é’¥/åœ°å€éªŒè¯ã€‚
//
// âš ï¸ **P1 MVP çº¦æŸ**ï¼š
// - æ”¯æŒ ECDSA_SECP256K1 å’Œ ED25519 ä¸¤ç§ç­¾åç®—æ³•
// - æ”¯æŒé€šè¿‡å…¬é’¥æˆ–åœ°å€å“ˆå¸Œè¿›è¡ŒéªŒè¯
// - æ’ä»¶æ— çŠ¶æ€ï¼Œå¯å¹¶è¡Œè°ƒç”¨
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼šVerifier Kernelï¼ˆé€šè¿‡ AuthZ Hookï¼‰
type SingleKeyPlugin struct {
	sigManager        crypto.SignatureManager
	hashManager       crypto.HashManager
	hashCanonicalizer *hash.Canonicalizer // è§„èŒƒåŒ–å“ˆå¸Œè®¡ç®—å™¨ï¼ˆTX å†…éƒ¨å·¥å…·ï¼‰
}

// NewSingleKeyPlugin åˆ›å»ºæ–°çš„ SingleKeyPlugin
//
// å‚æ•°ï¼š
//   - sigManager: ç­¾åç®¡ç†å™¨ï¼ˆç”¨äºéªŒè¯ç­¾åï¼‰
//   - hashManager: å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºåœ°å€è®¡ç®—ï¼‰
//   - hashCanonicalizer: è§„èŒƒåŒ–å“ˆå¸Œè®¡ç®—å™¨ï¼ˆç”¨äºäº¤æ˜“å“ˆå¸Œï¼‰
//
// è¿”å›ï¼š
//   - *SingleKeyPlugin: æ–°åˆ›å»ºçš„å®ä¾‹
func NewSingleKeyPlugin(
	sigManager crypto.SignatureManager,
	hashManager crypto.HashManager,
	hashCanonicalizer *hash.Canonicalizer,
) *SingleKeyPlugin {
	return &SingleKeyPlugin{
		sigManager:        sigManager,
		hashManager:       hashManager,
		hashCanonicalizer: hashCanonicalizer,
	}
}

// Name è¿”å›æ’ä»¶åç§°
//
// å®ç° tx.AuthZPlugin æ¥å£
//
// è¿”å›ï¼š
//   - string: "single_key"
func (p *SingleKeyPlugin) Name() string {
	return "single_key"
}

// Match éªŒè¯ UnlockingProof æ˜¯å¦åŒ¹é… LockingCondition
//
// å®ç° tx.AuthZPlugin æ¥å£
//
// ğŸ¯ **æ ¸å¿ƒé€»è¾‘**ï¼š
// 1. ç±»å‹æ£€æŸ¥ï¼šlock å¿…é¡»æ˜¯ SingleKeyLockï¼Œproof å¿…é¡»æ˜¯ SingleKeyProof
// 2. ç­¾åéªŒè¯ï¼šéªŒè¯ proof ä¸­çš„ç­¾åæ˜¯å¦å¯¹äº¤æ˜“å“ˆå¸Œæœ‰æ•ˆ
// 3. å…¬é’¥/åœ°å€éªŒè¯ï¼šéªŒè¯ proof ä¸­çš„å…¬é’¥æ˜¯å¦ä¸ lock ä¸­è¦æ±‚çš„ä¸€è‡´
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - lock: UTXO çš„é”å®šæ¡ä»¶
//   - unlockingProof: input çš„è§£é”è¯æ˜ï¼ˆwrapped in UnlockingProofï¼‰
//   - tx: å®Œæ•´çš„äº¤æ˜“å¯¹è±¡ï¼ˆç”¨äºç­¾åéªŒè¯ï¼‰
//
// è¿”å›ï¼š
//   - bool: æ˜¯å¦åŒ¹é…æ­¤æ’ä»¶
//   - true: æ­¤æ’ä»¶å¤„ç†äº†éªŒè¯ï¼ˆå¯èƒ½æˆåŠŸæˆ–å¤±è´¥ï¼‰
//   - false: æ­¤æ’ä»¶ä¸å¤„ç†æ­¤ç±»å‹çš„ lock/proof
//   - error: éªŒè¯é”™è¯¯
//   - nil: éªŒè¯æˆåŠŸ
//   - non-nil: éªŒè¯å¤±è´¥ï¼Œæè¿°å¤±è´¥åŸå› 
func (p *SingleKeyPlugin) Match(
	ctx context.Context,
	lock *transaction.LockingCondition,
	unlockingProof *transaction.UnlockingProof,
	tx *transaction.Transaction,
) (bool, error) {
	// 1. ç±»å‹æ£€æŸ¥ï¼šæ˜¯å¦ä¸º SingleKeyLock
	singleKeyLock := lock.GetSingleKeyLock()
	if singleKeyLock == nil {
		return false, nil // ä¸æ˜¯ SingleKeyLockï¼Œè®©å…¶ä»–æ’ä»¶å¤„ç†
	}

	// 2. æå– SingleKeyProof
	singleKeyProof := unlockingProof.GetSingleKeyProof()
	if singleKeyProof == nil {
		return true, fmt.Errorf("SingleKeyLock éœ€è¦ SingleKeyProofï¼Œä½†proofä¸ºç©ºæˆ–ç±»å‹ä¸åŒ¹é…")
	}

	// 3. æ‰¾åˆ°å½“å‰ input çš„ç´¢å¼•
	//   æ³¨æ„ï¼šç”±äº AuthZ éªŒè¯æ˜¯æŒ‰è¾“å…¥é¡ºåºè¿›è¡Œçš„ï¼Œæˆ‘ä»¬éœ€è¦æ‰¾åˆ°åŒ¹é…çš„ç´¢å¼•
	//   é€šè¿‡æ¯”è¾ƒ proof çš„æŒ‡é’ˆåœ°å€æ¥å®šä½
	inputIndex := -1
	for i, input := range tx.Inputs {
		// æ¯”è¾ƒ SingleKeyProof æ˜¯å¦æ˜¯åŒä¸€ä¸ªå¯¹è±¡
		if input.GetSingleKeyProof() == singleKeyProof {
			inputIndex = i
			break
		}
	}
	if inputIndex == -1 {
		return true, fmt.Errorf("æ— æ³•æ‰¾åˆ°å½“å‰è¾“å…¥çš„ç´¢å¼•")
	}

	// 4. éªŒè¯ç­¾å
	if err := p.verifySignature(ctx, tx, singleKeyProof, inputIndex); err != nil {
		return true, fmt.Errorf("ç­¾åéªŒè¯å¤±è´¥: %w", err)
	}

	// 5. éªŒè¯å…¬é’¥æˆ–åœ°å€
	if err := p.verifyPublicKey(ctx, singleKeyLock, singleKeyProof); err != nil {
		return true, fmt.Errorf("å…¬é’¥/åœ°å€éªŒè¯å¤±è´¥: %w", err)
	}

	return true, nil
}

// verifySignature éªŒè¯ç­¾åæ˜¯å¦æœ‰æ•ˆ
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: å¾…éªŒè¯çš„äº¤æ˜“
//   - proof: SingleKeyProofï¼ˆåŒ…å«ç­¾åå’Œå…¬é’¥ï¼‰
//   - inputIndex: å½“å‰è¾“å…¥ç´¢å¼•ï¼ˆç”¨äºè®¡ç®—ç­¾åå“ˆå¸Œï¼‰
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥çš„åŸå› 
func (p *SingleKeyPlugin) verifySignature(
	ctx context.Context,
	tx *transaction.Transaction,
	proof *transaction.SingleKeyProof,
	inputIndex int,
) error {
	// 1. ä½¿ç”¨ HashCanonicalizer è®¡ç®—ç­¾åå“ˆå¸Œï¼ˆç”¨äºéªŒè¯ï¼‰
	txHash, err := p.hashCanonicalizer.ComputeSignatureHashForVerification(
		ctx,
		tx,
		inputIndex,
		proof.SighashType,
	)
	if err != nil {
		return fmt.Errorf("è®¡ç®—ç­¾åå“ˆå¸Œå¤±è´¥: %w", err)
	}

	// 2. æå–å…¬é’¥
	if proof.PublicKey == nil || len(proof.PublicKey.Value) == 0 {
		return fmt.Errorf("å…¬é’¥ä¸ºç©º")
	}
	pubKeyBytes := proof.PublicKey.Value

	// 3. æå–ç­¾å
	if proof.Signature == nil || len(proof.Signature.Value) == 0 {
		return fmt.Errorf("ç­¾åä¸ºç©º")
	}
	signatureBytes := proof.Signature.Value

	// 4. æ ¹æ®ç®—æ³•éªŒè¯ç­¾å
	switch proof.Algorithm {
	case transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1:
		// ECDSA secp256k1 ç­¾åéªŒè¯
		// âš ï¸ ç›´æ¥ä½¿ç”¨verifyECDSAï¼Œå› ä¸ºtxHashå·²ç»æ˜¯è§„èŒƒåŒ–å“ˆå¸Œï¼Œä¸éœ€è¦å†å“ˆå¸Œ
		valid := p.sigManager.VerifyTransactionSignature(txHash, signatureBytes, pubKeyBytes, crypto.SigHashAll)
		if !valid {
			return fmt.Errorf("ECDSAç­¾åéªŒè¯å¤±è´¥: txHash=%x, pubKey=%x, sig=%x",
				txHash[:8], pubKeyBytes[:8], signatureBytes[:8])
		}

	case transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519:
		// Ed25519 ç­¾åéªŒè¯
		valid := p.sigManager.VerifyTransactionSignature(txHash, signatureBytes, pubKeyBytes, crypto.SigHashAll)
		if !valid {
			return fmt.Errorf("Ed25519ç­¾åéªŒè¯å¤±è´¥")
		}

	default:
		return fmt.Errorf("ä¸æ”¯æŒçš„ç­¾åç®—æ³•: %v", proof.Algorithm)
	}

	return nil
}

// verifyPublicKey éªŒè¯å…¬é’¥æˆ–åœ°å€æ˜¯å¦åŒ¹é…
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - lock: SingleKeyLockï¼ˆåŒ…å«é¢„æœŸçš„å…¬é’¥æˆ–åœ°å€ï¼‰
//   - proof: SingleKeyProofï¼ˆåŒ…å«å®é™…çš„å…¬é’¥ï¼‰
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥çš„åŸå› 
func (p *SingleKeyPlugin) verifyPublicKey(
	ctx context.Context,
	lock *transaction.SingleKeyLock,
	proof *transaction.SingleKeyProof,
) error {
	// æå– proof ä¸­çš„å…¬é’¥
	if proof.PublicKey == nil || len(proof.PublicKey.Value) == 0 {
		return fmt.Errorf("proofä¸­çš„å…¬é’¥ä¸ºç©º")
	}
	actualPubKey := proof.PublicKey.Value

	// æ£€æŸ¥ lock ä¸­å®šä¹‰çš„çº¦æŸç±»å‹
	switch keyReq := lock.KeyRequirement.(type) {
	case *transaction.SingleKeyLock_RequiredPublicKey:
		// çº¦æŸç±»å‹ï¼šç›´æ¥éªŒè¯å…¬é’¥
		if keyReq.RequiredPublicKey == nil || len(keyReq.RequiredPublicKey.Value) == 0 {
			return fmt.Errorf("lockä¸­çš„å…¬é’¥ä¸ºç©º")
		}
		expectedPubKey := keyReq.RequiredPublicKey.Value
		if !bytes.Equal(actualPubKey, expectedPubKey) {
			return fmt.Errorf("å…¬é’¥ä¸åŒ¹é…")
		}
		return nil

	case *transaction.SingleKeyLock_RequiredAddressHash:
		// çº¦æŸç±»å‹ï¼šé€šè¿‡åœ°å€éªŒè¯
		if len(keyReq.RequiredAddressHash) == 0 {
			return fmt.Errorf("lockä¸­çš„åœ°å€å“ˆå¸Œä¸ºç©º")
		}
		expectedAddressHash := keyReq.RequiredAddressHash

		// ä»å…¬é’¥è®¡ç®—åœ°å€å“ˆå¸Œ
		actualAddressHash, err := p.computeAddressFromPublicKey(actualPubKey)
		if err != nil {
			return fmt.Errorf("è®¡ç®—åœ°å€å“ˆå¸Œå¤±è´¥: %w", err)
		}

		if !bytes.Equal(actualAddressHash, expectedAddressHash) {
			return fmt.Errorf("åœ°å€å“ˆå¸Œä¸åŒ¹é…")
		}
		return nil

	default:
		return fmt.Errorf("ä¸æ”¯æŒçš„é”å®šçº¦æŸç±»å‹: %T", lock.KeyRequirement)
	}
}

// computeAddressFromPublicKey ä»å…¬é’¥è®¡ç®—åœ°å€
//
// å‚æ•°ï¼š
//   - pubKey: å…¬é’¥å­—èŠ‚
//
// è¿”å›ï¼š
//   - []byte: åœ°å€ï¼ˆ20å­—èŠ‚ï¼‰
//   - error: è®¡ç®—å¤±è´¥
func (p *SingleKeyPlugin) computeAddressFromPublicKey(pubKey []byte) ([]byte, error) {
	// åœ°å€è®¡ç®—ï¼šaddress = RIPEMD160(SHA256(pubKey))
	// è¿™æ˜¯ç±»ä¼¼ BTC çš„åœ°å€ç”Ÿæˆæ–¹å¼

	// 1. SHA256
	sha256Hash := p.hashManager.SHA256(pubKey)

	// 2. RIPEMD160
	addressHash := p.hashManager.RIPEMD160(sha256Hash)

	return addressHash, nil
}

// ç¼–è¯‘æœŸæ£€æŸ¥ï¼šç¡®ä¿ SingleKeyPlugin å®ç°äº† tx.AuthZPlugin æ¥å£
var _ tx.AuthZPlugin = (*SingleKeyPlugin)(nil)
