// Package authz_test æä¾› SingleKeyPlugin çš„å•å…ƒæµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•è§„èŒƒéµå¾ª**ï¼š
// - æ¯ä¸ªæºæ–‡ä»¶å¯¹åº”ä¸€ä¸ªæµ‹è¯•æ–‡ä»¶ï¼ˆsingle_key.go â†’ single_key_test.goï¼‰
// - éµå¾ªæµ‹è¯•è§„èŒƒï¼šdocs/system/standards/principles/testing-standards.md
package authz

import (
	"context"
	"fmt"
	"testing"

	"github.com/stretchr/testify/assert"

	"github.com/weisyn/v1/internal/core/tx/ports/hash"
	"github.com/weisyn/v1/internal/core/tx/testutil"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== SingleKeyPlugin æµ‹è¯• ====================

// TestNewSingleKeyPlugin æµ‹è¯•åˆ›å»º SingleKeyPlugin
func TestNewSingleKeyPlugin(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	assert.NotNil(t, plugin)
	assert.NotNil(t, plugin.sigManager)
	assert.NotNil(t, plugin.hashManager)
	assert.NotNil(t, plugin.hashCanonicalizer)
}

// TestSingleKeyPlugin_Name æµ‹è¯•æ’ä»¶åç§°
func TestSingleKeyPlugin_Name(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	assert.Equal(t, "single_key", plugin.Name())
}

// TestSingleKeyPlugin_Match_SingleKeyLock æµ‹è¯•åŒ¹é… SingleKeyLock
func TestSingleKeyPlugin_Match_SingleKeyLock(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	// åˆ›å»ºç›¸åŒçš„å…¬é’¥ï¼Œç¡®ä¿ lock å’Œ proof åŒ¹é…
	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	// åˆ›å»º SingleKeyProofï¼ˆå…ˆåˆ›å»º proofï¼Œç„¶åä» TxInput ä¸­æå–ï¼‰
	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey, // ä½¿ç”¨ç›¸åŒçš„å…¬é’¥
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	// åˆ›å»ºåŒ…å«è¾“å…¥çš„ TxInputï¼Œä½¿ç”¨åŒä¸€ä¸ª singleKeyProof å¯¹è±¡
	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof, // ä½¿ç”¨åŒä¸€ä¸ªå¯¹è±¡
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	// åˆ›å»º UnlockingProofï¼Œä½¿ç”¨åŒä¸€ä¸ª singleKeyProof å¯¹è±¡
	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof, // ä½¿ç”¨åŒä¸€ä¸ªå¯¹è±¡
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.NoError(t, err)
	assert.True(t, matched)
}

// TestSingleKeyPlugin_Match_NotSingleKeyLock æµ‹è¯•ä¸åŒ¹é…å…¶ä»–é”ç±»å‹
func TestSingleKeyPlugin_Match_NotSingleKeyLock(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	// MultiKeyLock ä¸åº”è¯¥åŒ¹é…
	lock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_MultiKeyLock{
			MultiKeyLock: &transaction.MultiKeyLock{
				RequiredSignatures: 2,
			},
		},
	}
	proof := testutil.CreateSingleKeyProof(nil, nil)
	tx := testutil.CreateTransaction(nil, nil)

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.NoError(t, err)
	assert.False(t, matched)
}

// TestSingleKeyPlugin_Match_NilLock æµ‹è¯• nil lock
func TestSingleKeyPlugin_Match_NilLock(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	proof := testutil.CreateSingleKeyProof(nil, nil)
	tx := testutil.CreateTransaction(nil, nil)

	// æ³¨æ„ï¼šå½“ lock ä¸º nil æ—¶ï¼ŒGetSingleKeyLock() ä¼š panic
	// ä½†æ ¹æ®å®ç°ï¼ŒMatch æ–¹æ³•ä¼šå…ˆæ£€æŸ¥ lock.GetSingleKeyLock()ï¼Œå¦‚æœè¿”å› nilï¼Œåˆ™è¿”å› false
	defer func() {
		if r := recover(); r != nil {
			// å¦‚æœ panicï¼Œè¿™æ˜¯é¢„æœŸçš„è¡Œä¸º
			assert.NotNil(t, r)
		}
	}()

	matched, err := plugin.Match(context.Background(), nil, proof, tx)

	// å¦‚æœè¿”å›äº†ç»“æœï¼ˆæ²¡æœ‰ panicï¼‰ï¼ŒéªŒè¯ç»“æœ
	if err == nil {
		assert.False(t, matched) // nil lock ä¸åº”è¯¥åŒ¹é…
	}
}

// TestSingleKeyPlugin_Match_NilProof æµ‹è¯• nil proof
func TestSingleKeyPlugin_Match_NilProof(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	lock := testutil.CreateSingleKeyLock(nil)
	tx := testutil.CreateTransaction(nil, nil)

	matched, err := plugin.Match(context.Background(), lock, nil, tx)

	assert.Error(t, err)
	assert.True(t, matched) // åŒ¹é…äº† SingleKeyLockï¼Œä½† proof ä¸ºç©º
	assert.Contains(t, err.Error(), "SingleKeyProof")
}

// TestSingleKeyPlugin_Match_MissingProof æµ‹è¯•ç¼ºå°‘ proof
func TestSingleKeyPlugin_Match_MissingProof(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	lock := testutil.CreateSingleKeyLock(nil)
	proof := &transaction.UnlockingProof{
		Proof: nil, // ç©ºçš„ proof
	}
	tx := testutil.CreateTransaction(nil, nil)

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "SingleKeyProof")
}

// TestSingleKeyPlugin_Match_InputIndexNotFound æµ‹è¯•æ‰¾ä¸åˆ°è¾“å…¥ç´¢å¼•
func TestSingleKeyPlugin_Match_InputIndexNotFound(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	// åˆ›å»ºä¸€ä¸ª proofï¼Œä½†äº¤æ˜“ä¸­æ²¡æœ‰å¯¹åº”çš„è¾“å…¥
	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	// åˆ›å»ºä¸€ä¸ªä¸åŒçš„ proof å¯¹è±¡ï¼ˆæŒ‡é’ˆä¸åŒï¼‰
	differentProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: differentProof, // ä½¿ç”¨ä¸åŒçš„ proof å¯¹è±¡
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof, // ä½¿ç”¨ä¸åŒçš„ proof å¯¹è±¡
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "æ— æ³•æ‰¾åˆ°å½“å‰è¾“å…¥çš„ç´¢å¼•")
}

// TestSingleKeyPlugin_Match_ComputeSignatureHashError æµ‹è¯•è®¡ç®—ç­¾åå“ˆå¸Œé”™è¯¯
func TestSingleKeyPlugin_Match_ComputeSignatureHashError(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}

	// åˆ›å»ºä¸€ä¸ªè¿”å›é”™è¯¯çš„ Canonicalizer
	errorClient := &ErrorMockTransactionHashServiceClient{
		computeSignatureHashError: fmt.Errorf("è®¡ç®—ç­¾åå“ˆå¸Œå¤±è´¥"),
	}
	mockCanonicalizer := hash.NewCanonicalizer(errorClient)

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "è®¡ç®—ç­¾åå“ˆå¸Œå¤±è´¥")
}

// TestSingleKeyPlugin_Match_EmptyPublicKeyInProof æµ‹è¯• proof ä¸­å…¬é’¥ä¸ºç©º
func TestSingleKeyPlugin_Match_EmptyPublicKeyInProof(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: nil, // å…¬é’¥ä¸ºç©º
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "å…¬é’¥ä¸ºç©º")
}

// TestSingleKeyPlugin_Match_EmptySignatureInProof æµ‹è¯• proof ä¸­ç­¾åä¸ºç©º
func TestSingleKeyPlugin_Match_EmptySignatureInProof(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature:   nil, // ç­¾åä¸ºç©º
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "ç­¾åä¸ºç©º")
}

// TestSingleKeyPlugin_Match_UnsupportedAlgorithm æµ‹è¯•ä¸æ”¯æŒçš„ç®—æ³•
func TestSingleKeyPlugin_Match_UnsupportedAlgorithm(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_UNKNOWN, // ä¸æ”¯æŒçš„ç®—æ³•
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "ä¸æ”¯æŒçš„ç­¾åç®—æ³•")
}

// TestSingleKeyPlugin_Match_SignatureVerificationFailure æµ‹è¯•ç­¾åéªŒè¯å¤±è´¥
func TestSingleKeyPlugin_Match_SignatureVerificationFailure(t *testing.T) {
	// åˆ›å»ºä¸€ä¸ªè¿”å› false çš„ MockSignatureManager
	mockSigMgr := &FailingMockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "ç­¾åéªŒè¯å¤±è´¥")
}

// TestSingleKeyPlugin_Match_RequiredPublicKeyMismatch æµ‹è¯•å…¬é’¥ä¸åŒ¹é…
func TestSingleKeyPlugin_Match_RequiredPublicKeyMismatch(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	expectedPublicKey := testutil.RandomPublicKey()
	actualPublicKey := testutil.RandomPublicKey() // ä¸åŒçš„å…¬é’¥

	lock := testutil.CreateSingleKeyLock(expectedPublicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: actualPublicKey, // ä½¿ç”¨ä¸åŒçš„å…¬é’¥
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "å…¬é’¥ä¸åŒ¹é…")
}

// TestSingleKeyPlugin_Match_RequiredAddressHashMismatch æµ‹è¯•åœ°å€å“ˆå¸Œä¸åŒ¹é…
func TestSingleKeyPlugin_Match_RequiredAddressHashMismatch(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	expectedAddressHash := testutil.RandomBytes(20)

	// åˆ›å»ºä½¿ç”¨åœ°å€å“ˆå¸Œçš„ lock
	lock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_SingleKeyLock{
			SingleKeyLock: &transaction.SingleKeyLock{
				KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
					RequiredAddressHash: expectedAddressHash,
				},
			},
		},
	}

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey, // è¿™ä¸ªå…¬é’¥å¯¹åº”çš„åœ°å€å“ˆå¸Œä¸ expectedAddressHash ä¸åŒ
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "åœ°å€å“ˆå¸Œä¸åŒ¹é…")
}

// TestSingleKeyPlugin_Match_UnsupportedKeyRequirement æµ‹è¯•ä¸æ”¯æŒçš„å¯†é’¥è¦æ±‚ç±»å‹
func TestSingleKeyPlugin_Match_UnsupportedKeyRequirement(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()

	// åˆ›å»ºä¸€ä¸ªæ²¡æœ‰ KeyRequirement çš„ lockï¼ˆè¿™ä¸åº”è¯¥å‘ç”Ÿï¼Œä½†æµ‹è¯•è¾¹ç•Œæƒ…å†µï¼‰
	lock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_SingleKeyLock{
			SingleKeyLock: &transaction.SingleKeyLock{
				KeyRequirement: nil, // ç©ºçš„ KeyRequirement
			},
		},
	}

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "ä¸æ”¯æŒçš„é”å®šçº¦æŸç±»å‹")
}

// TestSingleKeyPlugin_Match_Ed25519Algorithm æµ‹è¯• Ed25519 ç®—æ³•
func TestSingleKeyPlugin_Match_Ed25519Algorithm(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519, // Ed25519 ç®—æ³•
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.NoError(t, err)
	assert.True(t, matched)
}

// TestSingleKeyPlugin_Match_RequiredAddressHash_EmptyAddressHash æµ‹è¯•ç©ºåœ°å€å“ˆå¸Œ
func TestSingleKeyPlugin_Match_RequiredAddressHash_EmptyAddressHash(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()

	lock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_SingleKeyLock{
			SingleKeyLock: &transaction.SingleKeyLock{
				KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
					RequiredAddressHash: nil, // ç©ºçš„åœ°å€å“ˆå¸Œ
				},
			},
		},
	}

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "åœ°å€å“ˆå¸Œä¸ºç©º")
}

// TestSingleKeyPlugin_Match_RequiredPublicKey_EmptyPublicKey æµ‹è¯•ç©ºå…¬é’¥
func TestSingleKeyPlugin_Match_RequiredPublicKey_EmptyPublicKey(t *testing.T) {
	mockSigMgr := &testutil.MockSignatureManager{}
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()

	lock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_SingleKeyLock{
			SingleKeyLock: &transaction.SingleKeyLock{
				KeyRequirement: &transaction.SingleKeyLock_RequiredPublicKey{
					RequiredPublicKey: nil, // ç©ºçš„å…¬é’¥
				},
			},
		},
	}

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "å…¬é’¥ä¸ºç©º")
}


// TestSingleKeyPlugin_Match_Ed25519SignatureVerificationFailure æµ‹è¯• Ed25519 ç­¾åéªŒè¯å¤±è´¥
func TestSingleKeyPlugin_Match_Ed25519SignatureVerificationFailure(t *testing.T) {
	mockSigMgr := &FailingMockSignatureManager{} // ä½¿ç”¨å¤±è´¥çš„ç­¾åç®¡ç†å™¨
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519, // Ed25519 ç®—æ³•
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	assert.Contains(t, err.Error(), "Ed25519ç­¾åéªŒè¯å¤±è´¥")
}

// TestSingleKeyPlugin_Match_ECDSA_SignatureVerificationFailure_DetailedError æµ‹è¯• ECDSA ç­¾åéªŒè¯å¤±è´¥ï¼ˆè¯¦ç»†é”™è¯¯æ¶ˆæ¯ï¼‰
func TestSingleKeyPlugin_Match_ECDSA_SignatureVerificationFailure_DetailedError(t *testing.T) {
	mockSigMgr := &FailingMockSignatureManager{} // ä½¿ç”¨å¤±è´¥çš„ç­¾åç®¡ç†å™¨
	mockHashMgr := &testutil.MockHashManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	plugin := NewSingleKeyPlugin(mockSigMgr, mockHashMgr, mockCanonicalizer)

	publicKey := testutil.RandomPublicKey()
	lock := testutil.CreateSingleKeyLock(publicKey)

	singleKeyProof := &transaction.SingleKeyProof{
		PublicKey: &transaction.PublicKey{
			Value: publicKey,
		},
		Signature: &transaction.SignatureData{
			Value: testutil.RandomBytes(64),
		},
		Algorithm:   transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		SighashType: transaction.SignatureHashType_SIGHASH_ALL,
	}

	input := &transaction.TxInput{
		PreviousOutput:  testutil.CreateOutPoint(nil, 0),
		IsReferenceOnly: false,
		UnlockingProof: &transaction.TxInput_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}
	tx := testutil.CreateTransaction([]*transaction.TxInput{input}, nil)

	proof := &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: singleKeyProof,
		},
	}

	matched, err := plugin.Match(context.Background(), lock, proof, tx)

	assert.Error(t, err)
	assert.True(t, matched)
	// éªŒè¯é”™è¯¯æ¶ˆæ¯åŒ…å«è¯¦ç»†çš„è°ƒè¯•ä¿¡æ¯
	assert.Contains(t, err.Error(), "ECDSAç­¾åéªŒè¯å¤±è´¥")
	assert.Contains(t, err.Error(), "txHash=")
	assert.Contains(t, err.Error(), "pubKey=")
	assert.Contains(t, err.Error(), "sig=")
}
