package incentive

import (
	"bytes"
	"context"
	"fmt"
	"math/big"

	"github.com/weisyn/v1/internal/core/tx/ports/hash"
	transaction_pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo_pb "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/constants"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	txiface "github.com/weisyn/v1/pkg/interfaces/tx"
)

// SponsorClaimPlugin èµåŠ©é¢†å–äº¤æ˜“éªŒè¯æ’ä»¶
//
// ğŸ¯ **èµåŠ©æ¿€åŠ±éªŒè¯**
//
// è¯†åˆ«å¹¶éªŒè¯èµåŠ©é¢†å–äº¤æ˜“çš„ç»“æ„å’Œçº¦æŸã€‚
//
// éªŒè¯å†…å®¹ï¼š
//  1. è¯†åˆ«èµåŠ©é¢†å–äº¤æ˜“ï¼ˆ1è¾“å…¥+DelegationProofï¼‰
//  2. éªŒè¯Inputå¼•ç”¨çš„UTXO Owner = SponsorPoolOwner
//  3. éªŒè¯DelegationProofæœ‰æ•ˆæ€§
//  4. éªŒè¯è¾“å‡ºç»“æ„ï¼ˆçŸ¿å·¥é¢†å–+æ‰¾é›¶å›æ± ï¼‰
//  5. éªŒè¯é‡‘é¢å®ˆæ’
//
// ğŸ”§ **æ¶æ„ä¼˜åŒ–**ï¼ˆåŸºäºæ¶æ„åˆ†ææ–‡æ¡£ï¼‰ï¼š
//   - DelegateSignatureæ”¹ä¸ºå¯é€‰éªŒè¯ï¼šå¦‚æœæä¾›åˆ™éªŒè¯ï¼Œæœªæä¾›ä¸å½±å“éªŒè¯é€šè¿‡
//   - æƒé™éªŒè¯ä»¥LockingConditionsä¸ºå‡†ï¼šOwnerå­—æ®µä»…ä½œä¸ºè¾…åŠ©éªŒè¯ï¼ˆé˜²å¾¡æ€§ç¼–ç¨‹ï¼‰
//   - ä¿æŒ"ä»»æ„çŸ¿å·¥å¯é¢†å–"çš„çµæ´»æ€§ï¼šä¸å¼ºåˆ¶è¦æ±‚ç­¾åéªŒè¯
type SponsorClaimPlugin struct {
	eutxoQuery        persistence.UTXOQuery
	sigManager        crypto.SignatureManager // ç­¾åéªŒè¯ç®¡ç†å™¨
	hashManager       crypto.HashManager      // å“ˆå¸Œç®¡ç†å™¨
	hashCanonicalizer *hash.Canonicalizer     // äº¤æ˜“å“ˆå¸Œè®¡ç®—å™¨
}

// NewSponsorClaimPlugin åˆ›å»ºèµåŠ©é¢†å–éªŒè¯æ’ä»¶
//
// å‚æ•°ï¼š
//   - eutxoQuery: UTXOæŸ¥è¯¢æœåŠ¡
//   - sigManager: ç­¾åç®¡ç†å™¨ï¼ˆç”¨äºéªŒè¯DelegateSignatureï¼‰
//   - hashManager: å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºåœ°å€éªŒè¯ï¼‰
//   - hashCanonicalizer: äº¤æ˜“å“ˆå¸Œè®¡ç®—å™¨ï¼ˆç”¨äºç­¾åéªŒè¯ï¼‰
//
// è¿”å›ï¼š
//   - *SponsorClaimPlugin: æ’ä»¶å®ä¾‹
func NewSponsorClaimPlugin(
	eutxoQuery persistence.UTXOQuery,
	sigManager crypto.SignatureManager,
	hashManager crypto.HashManager,
	hashCanonicalizer *hash.Canonicalizer,
) *SponsorClaimPlugin {
	return &SponsorClaimPlugin{
		eutxoQuery:        eutxoQuery,
		sigManager:        sigManager,
		hashManager:       hashManager,
		hashCanonicalizer: hashCanonicalizer,
	}
}

// Name æ’ä»¶åç§°
func (p *SponsorClaimPlugin) Name() string {
	return "SponsorClaimValidator"
}

// Check å®ç° ConservationPlugin æ¥å£
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼šéªŒè¯èµåŠ©é¢†å–äº¤æ˜“çš„ä»·å€¼å®ˆæ’å’Œä¸šåŠ¡è§„åˆ™
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - inputs: è¾“å…¥ UTXO åˆ—è¡¨ï¼ˆå·²é€šè¿‡ ConservationHook è·å–ï¼‰
//   - outputs: è¾“å‡ºåˆ—è¡¨ï¼ˆä» Transaction ä¸­è·å–ï¼‰
//   - tx: å®Œæ•´çš„äº¤æ˜“å¯¹è±¡
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥åŸå› ï¼Œnilè¡¨ç¤ºé€šè¿‡
func (p *SponsorClaimPlugin) Check(
	ctx context.Context,
	inputs []*utxo_pb.UTXO,
	outputs []*transaction_pb.TxOutput,
	tx *transaction_pb.Transaction,
) error {
	// 1. è¯†åˆ«èµåŠ©é¢†å–äº¤æ˜“ç‰¹å¾ï¼š1è¾“å…¥ + DelegationProof
	if len(tx.Inputs) != 1 || len(inputs) != 1 {
		return nil // ä¸æ˜¯èµåŠ©é¢†å–äº¤æ˜“ï¼Œè·³è¿‡
	}

	delegationProof := tx.Inputs[0].GetDelegationProof()
	if delegationProof == nil {
		return nil // ä¸æ˜¯èµåŠ©é¢†å–äº¤æ˜“ï¼Œè·³è¿‡
	}

	sponsorUTXO := inputs[0]

	// 2. éªŒè¯UTXO Owner = SponsorPoolOwner
	if !bytes.Equal(sponsorUTXO.GetCachedOutput().Owner, constants.SponsorPoolOwner[:]) {
		return nil // ä¸æ˜¯èµåŠ©æ± UTXOï¼Œè·³è¿‡ï¼ˆå¯èƒ½æ˜¯æ™®é€šDelegationProofäº¤æ˜“ï¼‰
	}

	// 3. éªŒè¯è¾“å‡ºç»“æ„
	if err := p.validateOutputs(tx, sponsorUTXO, nil); err != nil {
		return fmt.Errorf("SponsorClaimPlugin: è¾“å‡ºéªŒè¯å¤±è´¥: %w", err)
	}

	// 4. éªŒè¯é‡‘é¢å®ˆæ’
	if err := p.validateConservation(tx, sponsorUTXO, delegationProof); err != nil {
		return fmt.Errorf("SponsorClaimPlugin: é‡‘é¢å®ˆæ’éªŒè¯å¤±è´¥: %w", err)
	}

	return nil
}

// Verify éªŒè¯äº¤æ˜“ï¼ˆä¿ç•™ç”¨äºå‘åå…¼å®¹ï¼Œå†…éƒ¨è°ƒç”¨Checkï¼‰
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡
//	tx: å¾…éªŒè¯çš„äº¤æ˜“
//	env: éªŒè¯ç¯å¢ƒï¼ˆå¿…é¡»å®ç°txiface.VerifierEnvironmentï¼‰
//
// è¿”å›ï¼š
//
//	error: éªŒè¯å¤±è´¥åŸå› ï¼Œnilè¡¨ç¤ºé€šè¿‡
//
// æ³¨æ„ï¼šæ­¤æ–¹æ³•ä¿ç•™ç”¨äºç‰¹æ®Šåœºæ™¯ï¼Œæ­£å¸¸æƒ…å†µä¸‹åº”ä½¿ç”¨Checkæ–¹æ³•
func (p *SponsorClaimPlugin) Verify(
	ctx context.Context,
	tx *transaction_pb.Transaction,
	env interface{},
) error {
	// 1. è¯†åˆ«èµåŠ©é¢†å–äº¤æ˜“ç‰¹å¾ï¼š1è¾“å…¥ + DelegationProof
	if len(tx.Inputs) != 1 {
		return nil // ä¸æ˜¯èµåŠ©é¢†å–äº¤æ˜“ï¼Œè·³è¿‡
	}

	delegationProof := tx.Inputs[0].GetDelegationProof()
	if delegationProof == nil {
		return nil // ä¸æ˜¯èµåŠ©é¢†å–äº¤æ˜“ï¼Œè·³è¿‡
	}

	// 2. ç±»å‹æ–­è¨€è·å–éªŒè¯ç¯å¢ƒ
	verifierEnv, ok := env.(txiface.VerifierEnvironment)
	if !ok {
		return fmt.Errorf("SponsorClaimPlugin: ç¯å¢ƒç±»å‹é”™è¯¯ï¼ŒæœŸæœ›txiface.VerifierEnvironment")
	}

	// 3. è·å–Inputå¼•ç”¨çš„UTXO
	sponsorUTXO, err := verifierEnv.GetUTXO(ctx, tx.Inputs[0].PreviousOutput)
	if err != nil {
		return fmt.Errorf("SponsorClaimPlugin: æŸ¥è¯¢èµåŠ©UTXOå¤±è´¥: %w", err)
	}

	// 3.1 å¼ºåˆ¶è¾“å…¥ä¸ºæ¶ˆè´¹æ¨¡å¼
	if tx.Inputs[0].IsReferenceOnly {
		return fmt.Errorf("SponsorClaimPlugin: èµåŠ©é¢†å–å¿…é¡»ä¸ºæ¶ˆè´¹æ¨¡å¼(IsReferenceOnly=false)")
	}

	// 4. éªŒè¯UTXO Owner = SponsorPoolOwner
	if !bytes.Equal(sponsorUTXO.GetCachedOutput().Owner, constants.SponsorPoolOwner[:]) {
		return nil // ä¸æ˜¯èµåŠ©æ± UTXOï¼Œè·³è¿‡ï¼ˆå¯èƒ½æ˜¯æ™®é€šDelegationProofäº¤æ˜“ï¼‰
	}

	// 4.1 éªŒè¯ DelegationLock æˆæƒåŒ…å« consume
	var delegationLock *transaction_pb.DelegationLock
	for _, lock := range sponsorUTXO.GetCachedOutput().LockingConditions {
		if dl := lock.GetDelegationLock(); dl != nil {
			delegationLock = dl
			break
		}
	}
	if delegationLock == nil {
		return fmt.Errorf("SponsorClaimPlugin: èµåŠ©UTXOç¼ºå°‘DelegationLock")
	}
	hasConsume := false
	for _, op := range delegationLock.AuthorizedOperations {
		if op == "consume" {
			hasConsume = true
			break
		}
	}
	if !hasConsume {
		return fmt.Errorf("SponsorClaimPlugin: DelegationLockæœªæˆæƒconsumeæ“ä½œ")
	}

	// 5. éªŒè¯DelegationProofåŸºæœ¬ç»“æ„
	if err := p.validateDelegationProof(ctx, delegationProof, tx, verifierEnv); err != nil {
		return fmt.Errorf("SponsorClaimPlugin: DelegationProoféªŒè¯å¤±è´¥: %w", err)
	}

	// 6. éªŒè¯è¾“å‡ºç»“æ„
	if err := p.validateOutputs(tx, sponsorUTXO, verifierEnv.GetMinerAddress()); err != nil {
		return fmt.Errorf("SponsorClaimPlugin: è¾“å‡ºéªŒè¯å¤±è´¥: %w", err)
	}

	// 7. éªŒè¯é‡‘é¢å®ˆæ’
	if err := p.validateConservation(tx, sponsorUTXO, delegationProof); err != nil {
		return fmt.Errorf("SponsorClaimPlugin: é‡‘é¢å®ˆæ’éªŒè¯å¤±è´¥: %w", err)
	}

	return nil
}

// validateDelegationProof éªŒè¯DelegationProofåŸºæœ¬ç»“æ„
func (p *SponsorClaimPlugin) validateDelegationProof(
	ctx context.Context,
	proof *transaction_pb.DelegationProof,
	tx *transaction_pb.Transaction,
	env txiface.VerifierEnvironment,
) error {
	// éªŒè¯OperationTypeå¿…é¡»æ˜¯"consume"
	if proof.OperationType != "consume" {
		return fmt.Errorf("èµåŠ©é¢†å–å¿…é¡»ä½¿ç”¨consumeæ“ä½œï¼Œå®é™…=%s", proof.OperationType)
	}

	// éªŒè¯DelegateAddresså¿…é¡»æ˜¯çŸ¿å·¥åœ°å€
	minerAddr := env.GetMinerAddress()
	if !bytes.Equal(proof.DelegateAddress, minerAddr) {
		return fmt.Errorf("DelegateAddresså¿…é¡»æ˜¯çŸ¿å·¥åœ°å€ï¼ŒæœŸæœ›=%xï¼Œå®é™…=%x",
			minerAddr, proof.DelegateAddress)
	}

	// ğŸ” **æ¶æ„ä¼˜åŒ–ï¼šDelegateSignatureæ”¹ä¸ºå¯é€‰éªŒè¯**
	//
	// **è®¾è®¡å†³ç­–**ï¼ˆåŸºäºæ¶æ„åˆ†ææ–‡æ¡£ï¼‰ï¼š
	// - DelegationLockå·²ç»æˆæƒä»»æ„çŸ¿å·¥å¯ä»¥consumeï¼ˆAllowedDelegatesä¸ºç©ºï¼‰
	// - DelegateAddresså·²ç»æŒ‡å®šäº†çŸ¿å·¥åœ°å€
	// - DelegateSignatureä¸»è¦ç”¨äºå®¡è®¡è¿½è¸ªï¼Œä¸æ˜¯å¿…é¡»çš„éªŒè¯é¡¹
	//
	// **éªŒè¯ç­–ç•¥**ï¼š
	// - å¦‚æœæä¾›äº†DelegateSignatureï¼Œåˆ™è¿›è¡ŒéªŒè¯ï¼ˆå¯é€‰åŠŸèƒ½ï¼‰
	// - å¦‚æœæœªæä¾›ï¼Œä¸å½±å“äº¤æ˜“éªŒè¯ï¼ˆä¿æŒ"ä»»æ„çŸ¿å·¥å¯é¢†å–"çš„çµæ´»æ€§ï¼‰
	//
	// **æœªæ¥æ‰©å±•**ï¼š
	// - å¦‚æœéœ€è¦å¼ºåˆ¶ç­¾åéªŒè¯ï¼Œå¯ä»¥é€šè¿‡DelegationLockçš„é…ç½®æ¥æ§åˆ¶
	// - æˆ–è€…ä½¿ç”¨ContractLockæ–¹æ¡ˆå®ç°æ›´å¤æ‚çš„ç­¾åéªŒè¯é€»è¾‘

	if proof.DelegateSignature != nil && len(proof.DelegateSignature.Value) > 0 {
		// âœ… **ä½¿ç”¨ VerifierEnvironment.GetPublicKey è·å–å…¬é’¥å¹¶éªŒè¯ç­¾å**
		if env != nil {
			// è®¡ç®—äº¤æ˜“ç­¾åå“ˆå¸Œï¼ˆèµåŠ©é¢†å–äº¤æ˜“åªæœ‰ä¸€ä¸ªè¾“å…¥ï¼Œç´¢å¼•ä¸º0ï¼‰
			inputIndex := 0
			txHash, err := p.hashCanonicalizer.ComputeSignatureHashForVerification(
				ctx, tx, inputIndex, transaction_pb.SignatureHashType_SIGHASH_ALL)
			if err != nil {
				// è®¡ç®—å“ˆå¸Œå¤±è´¥ï¼Œä½†ä¸é˜»æ­¢éªŒè¯é€šè¿‡ï¼ˆå‘åå…¼å®¹ï¼‰
				// return fmt.Errorf("è®¡ç®—äº¤æ˜“ç­¾åå“ˆå¸Œå¤±è´¥: %w", err)
			} else {
				// å°è¯•ä» VerifierEnvironment è·å–çŸ¿å·¥å…¬é’¥
				minerPubKey, err := env.GetPublicKey(ctx, proof.DelegateAddress)
				if err != nil {
					// è·å–å…¬é’¥å¤±è´¥ï¼Œä½†ä¸é˜»æ­¢éªŒè¯é€šè¿‡ï¼ˆå‘åå…¼å®¹ï¼‰
					// return fmt.Errorf("è·å–çŸ¿å·¥å…¬é’¥å¤±è´¥: %w", err)
				} else if len(minerPubKey) > 0 {
					// æˆåŠŸè·å–å…¬é’¥ï¼Œè¿›è¡Œç­¾åéªŒè¯
					valid := p.sigManager.VerifyTransactionSignature(
						txHash, proof.DelegateSignature.Value, minerPubKey, crypto.SigHashAll)
					if !valid {
						return fmt.Errorf("DelegateSignature éªŒè¯å¤±è´¥ï¼šçŸ¿å·¥ç­¾åæ— æ•ˆ")
					}
					// âœ… ç­¾åéªŒè¯é€šè¿‡
				}
				// å¦‚æœ minerPubKey ä¸º nilï¼Œè¯´æ˜åœ°å€æ²¡æœ‰å¯¹åº”çš„å…¬é’¥è®°å½•ï¼Œè·³è¿‡éªŒè¯
			}
		}
		// å¦‚æœæ²¡æœ‰æä¾› VerifierEnvironmentï¼Œè·³è¿‡ç­¾åéªŒè¯ï¼ˆå‘åå…¼å®¹ï¼‰
	}
	// å¦‚æœæœªæä¾›ç­¾åï¼Œè·³è¿‡éªŒè¯ï¼ˆå…è®¸ä»»æ„çŸ¿å·¥æ— ç­¾åé¢†å–ï¼‰

	return nil
}

// validateOutputs éªŒè¯è¾“å‡ºç»“æ„
func (p *SponsorClaimPlugin) validateOutputs(
	tx *transaction_pb.Transaction,
	sponsorUTXO *utxo_pb.UTXO,
	minerAddr []byte, // å¦‚æœä¸ºnilï¼Œä»DelegationProofä¸­æå–
) error {
	// å¦‚æœæœªæä¾›minerAddrï¼Œå°è¯•ä»DelegationProofä¸­æå–
	if minerAddr == nil {
		delegationProof := tx.Inputs[0].GetDelegationProof()
		if delegationProof != nil {
			minerAddr = delegationProof.DelegateAddress
		}
	}
	if len(minerAddr) == 0 {
		return fmt.Errorf("æ— æ³•ç¡®å®šçŸ¿å·¥åœ°å€")
	}
	if len(tx.Outputs) == 0 || len(tx.Outputs) > 2 {
		return fmt.Errorf("èµåŠ©é¢†å–äº¤æ˜“å¿…é¡»æœ‰1-2ä¸ªè¾“å‡ºï¼Œå®é™…=%d", len(tx.Outputs))
	}

	// ğŸ”’ **æ¶æ„ä¼˜åŒ–ï¼šæƒé™éªŒè¯ä»¥LockingConditionsä¸ºå‡†**
	//
	// **è®¾è®¡å†³ç­–**ï¼ˆåŸºäºæ¶æ„åˆ†ææ–‡æ¡£ï¼‰ï¼š
	// - Ownerå­—æ®µçš„ä½œç”¨ï¼šç´¢å¼•/å±•ç¤ºç”¨é€”ï¼ˆtransaction.proto:594ï¼‰
	// - LockingConditionsçš„ä½œç”¨ï¼šå®é™…æƒé™æ§åˆ¶ï¼ˆtransaction.proto:595ï¼‰
	// - æƒé™åº”è¯¥ä»¥LockingConditionsä¸ºå‡†ï¼ŒOwneråªæ˜¯è¾…åŠ©å­—æ®µ
	//
	// **éªŒè¯ç­–ç•¥**ï¼š
	// - æ ¸å¿ƒéªŒè¯ï¼šSingleKeyLockçš„åœ°å€å“ˆå¸Œï¼ˆå¿…é¡»éªŒè¯ï¼‰
	// - è¾…åŠ©éªŒè¯ï¼šOwnerå­—æ®µï¼ˆé˜²å¾¡æ€§ç¼–ç¨‹ï¼Œå‘ç°ä¸ä¸€è‡´æ—¶è­¦å‘Šä½†ä¸é˜»æ­¢ï¼‰

	// ğŸ”’ æ ¸å¿ƒéªŒè¯ï¼šOutput[0]å¿…é¡»æœ‰é”å®šæ¡ä»¶ï¼ˆUTXOæ¨¡å‹å¼ºåˆ¶è¦æ±‚ï¼‰
	if len(tx.Outputs[0].LockingConditions) == 0 {
		return fmt.Errorf("Output[0]å¿…é¡»æœ‰é”å®šæ¡ä»¶")
	}
	singleKeyLock := tx.Outputs[0].LockingConditions[0].GetSingleKeyLock()
	if singleKeyLock == nil {
		return fmt.Errorf("Output[0]å¿…é¡»ä½¿ç”¨SingleKeyLockï¼ˆçŸ¿å·¥åœ°å€é”ï¼‰")
	}

	// ğŸ” **æ ¸å¿ƒéªŒè¯ï¼šSingleKeyLockçš„åœ°å€å“ˆå¸ŒåŒ¹é…**
	//
	// **éªŒè¯é€»è¾‘**ï¼šéªŒè¯ SingleKeyLock çš„åœ°å€å“ˆå¸Œä¸çŸ¿å·¥åœ°å€ä¸€è‡´
	// è¿™æ˜¯UTXOæ¨¡å‹çš„æ ¸å¿ƒå®‰å…¨æœºåˆ¶ï¼Œç¡®ä¿ Output[0] ç¡®å®é”å®šç»™äº†æ­£ç¡®çš„çŸ¿å·¥åœ°å€

	// ä» SingleKeyLock æå–åœ°å€å“ˆå¸Œ
	keyReq := singleKeyLock.KeyRequirement
	if keyReq == nil {
		return fmt.Errorf("SingleKeyLock ç¼ºå°‘ KeyRequirement")
	}

	var requiredAddrHash []byte
	switch req := keyReq.(type) {
	case *transaction_pb.SingleKeyLock_RequiredAddressHash:
		requiredAddrHash = req.RequiredAddressHash
	case *transaction_pb.SingleKeyLock_RequiredPublicKey:
		// å¦‚æœä½¿ç”¨å…¬é’¥é”å®šï¼Œéœ€è¦ä»å…¬é’¥è®¡ç®—åœ°å€å“ˆå¸Œ
		// åœ°å€è®¡ç®—ï¼šaddress = RIPEMD160(SHA256(pubKey))
		sha256Hash := p.hashManager.SHA256(req.RequiredPublicKey.Value)
		requiredAddrHash = p.hashManager.RIPEMD160(sha256Hash)
	default:
		return fmt.Errorf("SingleKeyLock å¿…é¡»ä½¿ç”¨ RequiredAddressHash æˆ– RequiredPublicKey")
	}

	if len(requiredAddrHash) == 0 {
		return fmt.Errorf("SingleKeyLock ç¼ºå°‘æœ‰æ•ˆçš„åœ°å€å“ˆå¸Œ")
	}

	// éªŒè¯åœ°å€å“ˆå¸Œä¸çŸ¿å·¥åœ°å€ä¸€è‡´
	// **æ–¹æ¡ˆ1**ï¼šå¦‚æœ minerAddr æ˜¯å…¬é’¥å“ˆå¸Œï¼ˆ20å­—èŠ‚ï¼‰ï¼Œç›´æ¥æ¯”è¾ƒ
	// **æ–¹æ¡ˆ2**ï¼šå¦‚æœ minerAddr æ˜¯å…¶ä»–æ ¼å¼ï¼Œä½¿ç”¨ HashManager è®¡ç®—å“ˆå¸Œåæ¯”è¾ƒ
	if len(minerAddr) == 20 {
		// minerAddr æ˜¯ 20 å­—èŠ‚å…¬é’¥å“ˆå¸Œï¼Œç›´æ¥æ¯”è¾ƒ
		if !bytes.Equal(requiredAddrHash, minerAddr) {
			return fmt.Errorf("SingleKeyLock çš„åœ°å€å“ˆå¸Œä¸åŒ¹é…çŸ¿å·¥åœ°å€ï¼šæœŸæœ›=%xï¼Œå®é™…=%x",
				minerAddr, requiredAddrHash)
		}
	} else {
		// minerAddr æ˜¯å…¶ä»–æ ¼å¼ï¼ˆå¦‚å®Œæ•´åœ°å€ã€Bech32ç¼–ç ç­‰ï¼‰
		// ä½¿ç”¨ HashManager è®¡ç®—åœ°å€å“ˆå¸Œ
		// åœ°å€è®¡ç®—ï¼šaddress = RIPEMD160(SHA256(minerAddr))
		sha256Hash := p.hashManager.SHA256(minerAddr)
		minerAddrHash := p.hashManager.RIPEMD160(sha256Hash)
		if !bytes.Equal(requiredAddrHash, minerAddrHash) {
			return fmt.Errorf("SingleKeyLock çš„åœ°å€å“ˆå¸Œä¸åŒ¹é…çŸ¿å·¥åœ°å€ï¼šæœŸæœ›=%xï¼Œå®é™…=%x",
				minerAddrHash, requiredAddrHash)
		}
	}

	// âœ… æ ¸å¿ƒéªŒè¯é€šè¿‡ï¼šåœ°å€å“ˆå¸ŒåŒ¹é…

	// ğŸ” **è¾…åŠ©éªŒè¯ï¼šOwnerå­—æ®µä¸€è‡´æ€§æ£€æŸ¥ï¼ˆé˜²å¾¡æ€§ç¼–ç¨‹ï¼‰**
	// æ³¨æ„ï¼šå¦‚æœOwnerå­—æ®µä¸LockingConditionsä¸ä¸€è‡´ï¼Œè¿™é‡Œåªä½œä¸ºè­¦å‘Šå‚è€ƒ
	// å®é™…æƒé™æ§åˆ¶ä»¥LockingConditionsä¸ºå‡†
	if !bytes.Equal(tx.Outputs[0].Owner, minerAddr) {
		// Ownerå­—æ®µä¸ä¸€è‡´ï¼Œä½†ä¸å½±å“éªŒè¯é€šè¿‡ï¼ˆæƒé™ä»¥LockingConditionsä¸ºå‡†ï¼‰
		// åœ¨å®é™…ç”Ÿäº§ç¯å¢ƒä¸­ï¼Œå¯ä»¥è€ƒè™‘è®°å½•è­¦å‘Šæ—¥å¿—
		// è¿™é‡Œä¸è¿”å›é”™è¯¯ï¼Œå› ä¸ºLockingConditionsçš„éªŒè¯å·²ç»é€šè¿‡
	}

	// å¦‚æœæœ‰Output[1]ï¼Œå¿…é¡»æ˜¯æ‰¾é›¶å›èµåŠ©æ± 
	if len(tx.Outputs) == 2 {
		if !bytes.Equal(tx.Outputs[1].Owner, constants.SponsorPoolOwner[:]) {
			return fmt.Errorf("Output[1]çš„Ownerå¿…é¡»æ˜¯èµåŠ©æ± åœ°å€ï¼ŒæœŸæœ›=%xï¼Œå®é™…=%x",
				constants.SponsorPoolOwner[:], tx.Outputs[1].Owner)
		}

		// æ‰¾é›¶è¾“å‡ºå¿…é¡»ä¿æŒDelegationLock
		hasDelegationLock := false
		for _, lock := range tx.Outputs[1].LockingConditions {
			if lock.GetDelegationLock() != nil {
				hasDelegationLock = true
				break
			}
		}
		if !hasDelegationLock {
			return fmt.Errorf("æ‰¾é›¶è¾“å‡ºå¿…é¡»åŒ…å«DelegationLock")
		}
	}

	return nil
}

// validateConservation éªŒè¯é‡‘é¢å®ˆæ’
func (p *SponsorClaimPlugin) validateConservation(
	tx *transaction_pb.Transaction,
	sponsorUTXO *utxo_pb.UTXO,
	proof *transaction_pb.DelegationProof,
) error {
	// æå–èµåŠ©UTXOçš„æ€»é‡‘é¢
	inputAsset := sponsorUTXO.GetCachedOutput().GetAsset()
	if inputAsset == nil {
		return fmt.Errorf("èµåŠ©UTXOå¿…é¡»æ˜¯èµ„äº§è¾“å‡º")
	}

	inputAmount, ok := new(big.Int).SetString(p.extractAmount(inputAsset), 10)
	if !ok {
		return fmt.Errorf("è§£æè¾“å…¥é‡‘é¢å¤±è´¥")
	}

	// ğŸ”’ å®‰å…¨-2: æå–è¾“å…¥èµ„äº§ç±»å‹
	inputTokenKey := p.getAssetTokenKey(inputAsset)

	// è®¡ç®—æ‰€æœ‰è¾“å‡ºçš„æ€»é‡‘é¢
	var outputSum = big.NewInt(0)
	for i, output := range tx.Outputs {
		outAsset := output.GetAsset()
		if outAsset == nil {
			return fmt.Errorf("Output[%d]å¿…é¡»æ˜¯èµ„äº§è¾“å‡º", i)
		}

		// ğŸ”’ å®‰å…¨-2: éªŒè¯è¾“å‡ºèµ„äº§ç±»å‹ä¸è¾“å…¥ä¸€è‡´
		outTokenKey := p.getAssetTokenKey(outAsset)
		if inputTokenKey != outTokenKey {
			return fmt.Errorf("Output[%d]èµ„äº§ç±»å‹ä¸ä¸€è‡´ï¼šæœŸæœ›=%sï¼Œå®é™…=%s",
				i, inputTokenKey, outTokenKey)
		}

		outAmount, ok := new(big.Int).SetString(p.extractAmount(outAsset), 10)
		if !ok {
			return fmt.Errorf("è§£æOutput[%d]é‡‘é¢å¤±è´¥", i)
		}
		outputSum.Add(outputSum, outAmount)
	}

	// éªŒè¯å®ˆæ’ï¼šè¾“å…¥ == è¾“å‡º
	if inputAmount.Cmp(outputSum) != 0 {
		return fmt.Errorf("é‡‘é¢ä¸å®ˆæ’ï¼šè¾“å…¥=%sï¼Œè¾“å‡º=%s",
			inputAmount.String(), outputSum.String())
	}

	// éªŒè¯é¢†å–é‡‘é¢ <= MaxValuePerOperationï¼ˆå¦‚æœè®¾ç½®ï¼‰
	claimAmount, ok := new(big.Int).SetString(p.extractAmount(tx.Outputs[0].GetAsset()), 10)
	if !ok {
		return fmt.Errorf("è§£æé¢†å–é‡‘é¢å¤±è´¥")
	}

	// ğŸ”’ ç¼ºé™·-1: éªŒè¯ValueAmountï¼ˆuint64ç»Ÿä¸€è½¬big.Intï¼‰
	if proof.ValueAmount > 0 {
		// ä½¿ç”¨SetUint64å®‰å…¨è½¬æ¢uint64åˆ°big.Intï¼Œé¿å…æº¢å‡ºé£é™©
		proofAmount := new(big.Int).SetUint64(proof.ValueAmount)
		if claimAmount.Cmp(proofAmount) != 0 {
			return fmt.Errorf("é¢†å–é‡‘é¢ä¸Proofä¸ä¸€è‡´ï¼šå®é™…=%sï¼ŒProof=%s",
				claimAmount.String(), proofAmount.String())
		}
	}

	return nil
}

// extractAmount ä»AssetOutputæå–é‡‘é¢å­—ç¬¦ä¸²
func (p *SponsorClaimPlugin) extractAmount(asset *transaction_pb.AssetOutput) string {
	if nc := asset.GetNativeCoin(); nc != nil {
		return nc.Amount
	}
	if ct := asset.GetContractToken(); ct != nil {
		return ct.Amount
	}
	return "0"
}

// getAssetTokenKey æå–èµ„äº§çš„TokenKeyï¼ˆç”¨äºç±»å‹ä¸€è‡´æ€§æ£€æŸ¥ï¼‰
func (p *SponsorClaimPlugin) getAssetTokenKey(asset *transaction_pb.AssetOutput) string {
	if nc := asset.GetNativeCoin(); nc != nil {
		return "native"
	}
	if ct := asset.GetContractToken(); ct != nil {
		// ä½¿ç”¨protoå®é™…ç»“æ„ï¼šcontract_address + token_identifier
		contractAddr := fmt.Sprintf("%x", ct.ContractAddress)
		switch ti := ct.TokenIdentifier.(type) {
		case *transaction_pb.ContractTokenAsset_FungibleClassId:
			return fmt.Sprintf("FT:%s:%x", contractAddr, ti.FungibleClassId)
		case *transaction_pb.ContractTokenAsset_NftUniqueId:
			return fmt.Sprintf("NFT:%s:%x", contractAddr, ti.NftUniqueId)
		case *transaction_pb.ContractTokenAsset_SemiFungibleId:
			return fmt.Sprintf("SFT:%s:%x:%d", contractAddr, ti.SemiFungibleId.BatchId, ti.SemiFungibleId.InstanceId)
		}
	}
	return "unknown"
}
